<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.walletforandroid.DebtAddActivity" >
    
    <LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical" >

        <TextView
			android:id="@+id/webIP"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/typeChoice" />

		<Spinner
			android:id="@+id/typeChoiceForDebt"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />

		<TextView
			android:id="@+id/myIP"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/debteeInput" />

		<EditText
			android:id="@+id/debteeInput"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:ems="10" >
			<requestFocus />
		</EditText>
		
		<TextView
			android:id="@+id/textView3"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/inputNumber" />
		
		<EditText
			android:id="@+id/numberInputForDebt"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:ems="10"
			android:inputType="numberDecimal" />
		
		<TextView
			android:id="@+id/textView4"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/debtRate" />
		
		<EditText
			android:id="@+id/rateInput"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:ems="10"
			android:inputType="numberDecimal" />
		
		<TextView
			android:id="@+id/textView5"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/rateTypeChoice" />
		
		<Spinner
			android:id="@+id/rateType"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />

		<TextView
		    android:id="@+id/textView6"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/deadline" />

		<EditText
		    android:id="@+id/deadlineInput"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:ems="10"
		    android:inputType="date" />
		
		<Button
		    android:id="@+id/buttonForChooseDeadline"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="36dp"
		    android:text="@string/submit" />

	</LinearLayout>

</RelativeLayout>
