<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.walletforandroid.ReasonActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/reasonStateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reasonStateButton" />

        <Button
            android:id="@+id/addReasonButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addReason" />

        <Button
            android:id="@+id/renameReasonButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/renameReason" />

        <Button
            android:id="@+id/removeReasonButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/removeReason" />
        
    </LinearLayout>

</RelativeLayout>
