<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.walletforandroid.RegisterActivity" >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

		<TextView
		    android:id="@+id/webIP"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/inputUserName" />
		
		<EditText
		    android:id="@+id/newUserNameInput"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:ems="10" >

            <requestFocus />
        </EditText>

		<TextView
		    android:id="@+id/myIP"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/inputPassWord" />

		<EditText
		    android:id="@+id/newUserPasswordInput"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:ems="10"
		    android:inputType="textPassword" />

		<TextView
		    android:id="@+id/textView3"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/InputRepeat" />

		<EditText
		    android:id="@+id/newUserPasswordRepeat"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:ems="10"
		    android:inputType="textPassword" />

		<TextView
		    android:id="@+id/textView4"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/UserReasonTypeChoice" />

		<Spinner
		    android:id="@+id/newUserReasonTypeChoice"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content" />

		<Button
		    android:id="@+id/newUserRegister"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/registerButton" />

    </LinearLayout>
>

</RelativeLayout>
